--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@ionic-native/camera": "^3.10.2",
         "@ionic-native/core": "3.7.0",
         "@ionic-native/geolocation": "^3.9.2",
+        "@ionic-native/google-maps": "^3.12.1",
         "@ionic-native/network": "^3.10.3",
         "@ionic-native/splash-screen": "3.7.0",
         "@ionic-native/status-bar": "3.7.0",
@@ -36,6 +37,8 @@
         "cordova-plugin-console": "^1.0.5",
         "cordova-plugin-device": "^1.1.4",
         "cordova-plugin-geolocation": "^2.4.3",
+        "cordova-plugin-googlemaps": "^1.4.0",
+        "cordova-plugin-googlemaps-sdk": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps-sdk.git",
         "cordova-plugin-network-information": "^1.3.3",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
@@ -72,7 +75,13 @@
                 "PHOTOLIBRARY_USAGE_DESCRIPTION": " "
             },
             "mx.ferreyra.callnumber": {},
-            "cordova-plugin-network-information": {}
+            "cordova-plugin-network-information": {},
+            "cordova-plugin-googlemaps": {
+                "API_KEY_FOR_ANDROID": "“AIzaSyDJOilNBzS1vyKAf-tfQqo-DLQyys5OpDo”",
+                "API_KEY_FOR_IOS": "“AIzaSyAx-cBfiiakJIibwj9vLmo49HdN-Ylajtk”",
+                "NSLOCATIONWHENINUSEUSAGEDESCRIPTION": "Show your location on the map",
+                "NSLOCATIONALWAYSUSAGEDESCRIPTION": "Trace your location on the map"
+            }
         },
         "platforms": [
             "ios"
